# rust-actix-web-boilerplate-with-prisma-orm

./: Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
prisma/: schema.prisma
src/: main.rs
src/app/: mod.rs  route.rs
src/app/api/: playlist.rs
src/app/db/: mod.rs
