[package]
authors = ["Jatutep Bunupuradah <bangbaew@gmail.com>"]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.0"
actix-rt = "2.8.0"
serde = "1.0.152"
env_logger = "0.10.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust" }